<?xml version="1.0"?>
<package format="3">
  <name>my_robot_vision_pkg</name>
  <version>0.0.1</version>
  <description>ROS2 robot vision and navigation system</description>

  <maintainer email="n1007535@my.ntu.ac.uk">Frank Motsi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
